#315977 firefox4 에서 backspace로 글자가 안지워지는 문제

firefox4에서 preedit 상태에서 backspace를 연속해서 누르면 preedit string은
지워지지만 그 이후에는 글자가 지워지지 않는다.
firefox4의 버그 https://bugzilla.mozilla.org/show_bug.cgi?id=640884 에 따르면 
preedit start, preedit end signal이 없어서 라고 한다.

preedit string이 다 지워지고 나면 nabi는 backspace키를 어플리케이션에게
forwarding을 해준다. 따라서 어플리케이션이 im이 forwarding하는 키를
무시하지 않는다면 모두 받을 수 있다. 그런데 firefox는 그렇게 처리하지
않는 것 같다. preedit end가 오기 전까지는 im이 키를 forwarding 해주어도
키를 처리하지 않는 것 같다.

엄밀히 말하면, xim 클라이언트는 입력기가 forwarding해주는 키를 처리하면 
그만이지, preedit string의 유무에 따라서 전달된 키 이벤트를 사용하고 
말고를 판단할 필요가 없다. 그런데 몇몇 구현에서 저런 방식을 사용하는 것 같다.

따라서 preedit start, preedit done callback을 실제로 preedit string이 
나타나고 사라질때 같이 불러 주기로 한다.

그전에는 IMPreeditStart()와 XIM_PREEDIT_START,
IMPreeditEnd()와 XIM_PREEDIT_DONE을 한 함수에서 처리했기 때문에
preedit done을 호출하면 입력이 종료되는 문제가 있었다.

그래서 IMPreeditStart(), IMPreeditEnd() 함수는 입력이 시작되는 
시점에(한영 전환시)호출해주고, preedit string이 새로 나오거나
없어질때 XIM_PREEDIT_START, XIM_PREEDIT_DONE 콜백을 불러준다.

이렇게 하면 firefox4에서 글자가 잘 지워진다.



git-svn-id: http://kldp.net/svn/nabi/nabi/trunk@809 3598d0bf-7bfb-0310-a9b8-e6047f1a0475